gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-repr128.rs
#[repr(u128)]
enum A { // { dg-error ".E0658." "" { target *-*-* } }
    A(u64)
}

fn main() {}

